Found a better fix to the code wrapping issue using css.
git-svn-id: svn://svn.zenadmin.org/zena/trunk@994 aaa19a3b-e121-0410-9d45-962fd44e537e

--- a/public/stylesheets/code.css
+++ b/public/stylesheets/code.css
@@ -1,4 +1,3 @@
-code.ruby { white-space:normal; }
 .ruby .normal {}
 .ruby .comment { color: #005; font-style: italic; }
 .ruby .keyword { color: #622; font-weight: bold; }
@@ -17,27 +16,23 @@ code.ruby { white-space:normal; }
 .ruby .global { color: #3B7; }
 .ruby .expr { color: #227; }
 
-code.zafu { white-space:normal; }
 .zafu .tag {color: #171;}
 .zafu .punct {color: #622;}
 .zafu .ztag {color: #622; font-weight: bold; }
 .zafu .param { color:#a33;}
 .zafu .value { color:#449;}
 
-code.erb { white-space:normal; }
 .erb .tag {color: #171;}
 .erb .punct {color: #622; background:#DDDBD2; padding:2px 0;}
 .erb .ruby .punct { color: #447; }
 .erb .expr { color:#227; background:#DDDBD2; padding:2px 0;}
 .erb pre { display:inline; }
 
-code.sh { white-space:normal; }
 .sh .punct { color:#686;}
 .sh .root  { color:#966;}
 .sh .variable { color:#33a;}
 .sh .method { color: #944; }
 
-code.css { white-space:normal; }
 .css .comment { color: #005; font-style: italic; }
 .css .punct { color:#686;}
 .css .variable { color:#33a;}
@@ -45,3 +40,12 @@ code.css { white-space:normal; }
 .css .tag   { color: #171;}
 .css .id    { color:#73302F; font-weight:bold;}
 .css .class { color:orange;}
+
+
+pre code {
+white-space: pre-wrap; /* css-3 */
+white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+white-space: -pre-wrap; /* Opera 4-6 */
+white-space: -o-pre-wrap; /* Opera 7 */
+word-wrap: break-word; /* Internet Explorer 5.5+ */
+}
